@@ -5,7 +5,6 @@ import com.amigoscode.exception.RequestValidationException;
 import com.amigoscode.exception.ResourceNotFoundException;
 import com.amigoscode.s3.S3Buckets;
 import com.amigoscode.s3.S3Service;
-import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
@@ -27,9 +26,7 @@ public class CustomerService {
 
     public CustomerService(@Qualifier("jdbc") CustomerDao customerDao,
                            CustomerDTOMapper customerDTOMapper,
-                           PasswordEncoder passwordEncoder,
-                           S3Service s3Service,
-                           S3Buckets s3Buckets) {
+                           PasswordEncoder passwordEncoder, S3Service s3Service, S3Buckets s3Buckets) {
         this.customerDao = customerDao;
         this.customerDTOMapper = customerDTOMapper;
         this.passwordEncoder = passwordEncoder;
@@ -74,6 +71,7 @@ public class CustomerService {
 
     public void deleteCustomerById(Integer customerId) {
         checkIfCustomerExistsOrThrow(customerId);
+
         customerDao.deleteCustomerById(customerId);
     }
 
@@ -122,37 +120,35 @@ public class CustomerService {
         customerDao.updateCustomer(customer);
     }
 
-    public void uploadCustomerProfileImage(Integer customerId,
-                                           MultipartFile file) {
+    public void uploadCustomerProfilePic(Integer customerId, MultipartFile file) {
         checkIfCustomerExistsOrThrow(customerId);
         String profileImageId = UUID.randomUUID().toString();
         try {
             s3Service.putObject(
                     s3Buckets.getCustomer(),
-                    "profile-images/%s/%s".formatted(customerId, profileImageId),
+                    "profile-images/%s/%s".formatted(customerId,profileImageId),
                     file.getBytes()
             );
         } catch (IOException e) {
-            throw new RuntimeException("failed to upload profile image", e);
+            throw new RuntimeException(e);
         }
-        customerDao.updateCustomerProfileImageId(profileImageId, customerId);
+        customerDao.updateCustomerProfileimageId(profileImageId, customerId);
     }
 
-    public byte[] getCustomerProfileImage(Integer customerId) {
+    public byte[] getCustomerProfilePic(Integer customerId) {
         var customer = customerDao.selectCustomerById(customerId)
                 .map(customerDTOMapper)
                 .orElseThrow(() -> new ResourceNotFoundException(
                         "customer with id [%s] not found".formatted(customerId)
                 ));
-
-        if (StringUtils.isBlank(customer.profileImageId())) {
+        if (customer.profileImageId().isBlank()){
             throw new ResourceNotFoundException(
-                    "customer with id [%s] profile image not found".formatted(customerId));
+                    "customer with id [%s] profile image not found".formatted(customerId)
+            );
         }
-
         byte[] profileImage = s3Service.getObject(
                 s3Buckets.getCustomer(),
-                "profile-images/%s/%s".formatted(customerId, customer.profileImageId())
+                "profile-images/%s/%s".formatted(customerId,customer.profileImageId())
         );
         return profileImage;
     }
